// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="position-left-top direction-column container-parent sc-kGXeez SzHZb"
    style={undefined}
  >
    <div
      direction="column"
      position="left-top"
    />
  </aside>
</span>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="position-left-top direction-column container-parent sc-kGXeez SzHZb"
    style={undefined}
  >
    <div
      direction="column"
      position="left-top"
    />
  </aside>
</span>
`;

exports[`When using snapshots Should render with the opened prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="position-left-top direction-column container-parent opened sc-kGXeez SzHZb"
    style={
      Object {
        "opacity": 1,
        "transform": "translate(0,0)",
      }
    }
  >
    <div
      direction="column"
      position="left-top"
    />
  </aside>
</span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="position-left-top direction-column container-parent sc-kGXeez SzHZb"
    style={undefined}
  >
    <div
      direction="column"
      position="left-top"
      shape="square"
    />
  </aside>
</span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <aside
    className="position-left-top direction-column container-parent sc-kGXeez SzHZb"
    style={undefined}
  >
    <div
      direction="column"
      position="left-top"
      size="xs"
    />
  </aside>
</span>
`;
